--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
 
 add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})
 
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS} ${OPENGL_LIBRARIES})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARIES} -lfreeglut)
